# compositor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  catalog.toml  justfile  mycelium.toml  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/compositor/: Cargo.toml
crates/compositor/assets/: compositor.css  compositor.js  editor.css  editor.js  style.css
crates/compositor/src/: assets.rs  build.rs  config.rs  lib.rs  main.rs  render_page.rs  root_assets.rs  serve.rs
crates/compositor/templates/: page.html
crates/compositor/tests/: build_cli.rs  render_page.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: admonitions.rs  exclude.rs  frontmatter.rs  lib.rs  markdown.rs  nav.rs  site.rs  wikilink.rs
crates/render-core/tests/: build_site.rs  links.rs  nav.rs
docs/: FOLLOWUPS.md
