[package]
name = "compositor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "compositor"
path = "src/main.rs"

[dependencies]
render-core = { path = "../render-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
askama = "0.12"
anyhow = "1"
