[package]
name = "render-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
comrak = { version = "0.54", features = ["syntect"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
anyhow = "1"
ignore = "0.4"
percent-encoding = "2.3"
